core/src/ast/snapshots/span_testing/diplomat_core__ast__logging__tests__flush@malformed_rust_link.rs_ugly.snap
---
source: core/src/ast/logging.rs
expression: self.buf
---
Diplomat error: Could not read rust link
In src/ast/snapshots/span_testing/malformed_rust_link.rs:3:27:
...link(*)]...
        ^
expected identifier
